html/css/style.css
/* ... */
/* Medium devices (tablets, 768px and up) */
@media (max-width: 992px) {
  .expand-wrapper {
    display: none;
  }
  .intro_img,
  .intro_column {
    margin-bottom: 1em;
  }
  .minus-mb-35 {
    margin-bottom: 0;
   }
   .index-card .text {
       font-size: 1.5rem;
   }
   .index-card .text {
       font-size: 2rem !important;
   }
   .index-card .text {
        -webkit-transition: none;
        -moz-transition: none;
        -o-transition: none;
        -ms-transition: none;
        transition: none;
        transform: none;
        -webkit-transform: none;
        padding: 0 .7rem;
        height: 100px;
        overflow: visible;
        align-items: center;
        display: flex;
        justify-content: center;
        flex-direction: column;
        opacity: 1;
    }
    .index-card .fadedbox {
        opacity: 1;
        height: 100px;
    }
    .index-card:hover .fadedbox {
        
    }
    .index-card:hover .card-header img {
        -webkit-transition: none;
        -moz-transition: none;
        -o-transition: none;
        -ms-transition: none;
        transition: none;
        opacity: 1;
    }
}

@media (max-width: 1200px) {
  .index_card .card-header h4,
  p {
    font-size: 16px !important;
  }
  .margin-top {
    margin-top: 0;
    
    }
 .index-card .text {
       font-size: .5rem;
   }
   .index-card .text {
        transform: translateY(-50%);
        -webkit-transform: translateY(-50%);
        height: 256px;
    }
}

/* Large devices (desktops, 992px and up) */
/*@media (min-width: 992px) {  }*/

/* Extra large devices (large desktops, 1680px and up) */
@media (max-width: 1680px) {
      .margin-top {
        margin-top: 0;
    }
    .index-card .text {
       font-size: .75rem;
   }
   .index-card .text {
        transform: translateY(-70%);
        -webkit-transform: translateY(-70%);
        height: 256px;
    }
}

